# otus_ml_homeworks

AutoML/: AutoML.ipynb  requirements.txt
AutoML/src/: feature_selector.py  get_model.py
Bayes/: homework.ipynb
Dask/: Dask.ipynb
FastAPI&Docker/model/: model.cbm
Featuretools/: featuretools.ipynb
Graphs/: homework.ipynb
RecSys/: best_params_for_SVDpp.json  main.ipynb
TimeSeries/: main.ipynb  pyproject.toml
