[tool.poetry]
name = "timeseries"
version = "0.1.0"
description = ""
authors = ["Daniil Serov <zendrokalash1313@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.8"
ipython = "8.12"
pandas = "^2.0.2"
tsfresh = "^0.20.1"
tsfel = "^0.1.5"
cryptocompare = "^0.7.6"
scikit-learn = "^1.2.2"
jupyter = "^1.0.0"
PyWavelets = "^1.4.1"
matplotlib = "^3.7.1"
tslearn = "^0.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
